<resources
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="UnusedResources"
>
	<string name="app_name">Gloomy Dungeons II</string>
	<string name="typeface">furore.ttf</string>
	<string name="typeface_interface">roboto</string>
	<string name="menu_achievements">ACHIEVEMENTS</string>
	<string name="menu_store">STORE</string>
	<string name="menu_play">PLAY</string>
	<string name="menu_load">LOAD</string>
	<string name="menu_save">SAVE</string>
	<string name="menu_options">OPTIONS</string>
	<string name="menu_share">SHARE</string>
	<string name="menu_discount_offer" formatted="false">Limited offer! Earn 25% credits for free!</string>
	<string name="menu_new_version">New version is available. Tap here to download</string>
	<string name="prep_textures">Preparing textures</string>
	<string name="prep_downloading_music">Downloading HQ music</string>
	<string name="prep_download_later">Download later</string>
	<string name="prep_download_error">Download error</string>
	<string name="se_back">← Back</string>
	<string name="se_continue">Continue →</string>
	<string name="se_info">Kills: %1$d / Items: %2$d / Secrets: %3$d / Time: %4$s</string>
	<string name="dlg_yes">Yes</string>
	<string name="dlg_no">No</string>
	<string name="dlg_new_game">Current progress will be lost.\nAre you sure?</string>
	<string name="dlg_quit_game">There are more monsters to kill.\nAre you sure to quit?</string>
	<string name="dlg_ok">OK</string>
	<string name="dlg_cancel">Cancel</string>
	<string name="dlg_rate_title">Rate this game</string>
	<string name="dlg_rate_quit">Just quit the game</string>
	<string name="dlg_select_controls">Select control scheme</string>
	<string name="dlg_select_slot_load">Select slot for load</string>
	<string name="dlg_select_slot_save">Select slot for save</string>
	<string name="dlg_enter_code">Enter code</string>
	<string name="dlg_change_weapon">Change weapon</string>
	<string name="dlg_exit_to_menu">× Exit to menu</string>
	<string name="dlg_game_code">Game code</string>
	<string name="dlg_upgrade">⇪ Upgrade</string>
	<string name="dlg_difficulty_title">Change Difficulty</string>
	<string name="dlg_difficulty_newbie">Newbie</string>
	<string name="dlg_difficulty_easy">Easy</string>
	<string name="dlg_difficulty_normal">Normal</string>
	<string name="dlg_difficulty_hard">Hard</string>
	<string name="dlg_difficulty_ultimate">Ultimate</string>
	<string name="dlg_share">Share</string>
	<string name="dlg_state_enabled">Enabled</string>
	<string name="dlg_state_disabled">Disabled</string>
	<string name="msg_game_saved">Game saved</string>
	<string name="msg_cant_copy_state">Can’t copy state - probably there is no free space in internal storage</string>
	<string name="msg_cant_save_state">Can’t save state - probably there is no free space in internal storage</string>
	<string name="msg_cant_load_state">Can’t load state</string>
	<string name="msg_cant_save_profile">Can’t save profile - probably there is no free space in internal storage</string>
	<string name="msg_cant_load_profile">Can’t load profile</string>
	<string name="pref_general">General</string>
	<string name="pref_help">Help</string>
	<string name="pref_about">About and licenses</string>
	<string name="pref_restart">Restart game from the very beginning</string>
	<string name="pref_controls">Controls</string>
	<string name="pref_controls_scheme">Control scheme</string>
	<string name="pref_controls_settings">Controls settings</string>
	<string name="pref_controls_alpha">Controls opacity</string>
	<string name="pref_controls_scale">Controls scale</string>
	<string name="pref_accelerometer_enabled">Enable accelerometer</string>
	<string name="pref_accelerometer_acceleration">Accelerometer acceleration</string>
	<string name="pref_trackball_acceleration">Trackball acceleration</string>
	<string name="pref_invert_vertical_look">Invert vertical look</string>
	<string name="pref_invert_horizontal_look">Invert horizontal look</string>
	<string name="pref_left_hand_aim">Left hand aim</string>
	<string name="pref_fire_button_at_top">Fire button at top</string>
	<string name="pref_move_speed">Move speed</string>
	<string name="pref_strafe_speed">Strafe speed</string>
	<string name="pref_rotate_speed">Rotate speed</string>
	<string name="pref_key_mappings">Key mappings</string>
	<string name="pref_screen">Screen</string>
	<string name="pref_gamma">Gamma</string>
	<string name="pref_smoothing_level">Smoothing level</string>
	<string name="pref_sound">Sound</string>
	<string name="pref_enable_sound">Enable sound</string>
	<string name="pref_music_volume">Music volume</string>
	<string name="pref_effects_volume">Effects volume</string>
	<string name="pref_key_forward">Forward</string>
	<string name="pref_key_backward">Backward</string>
	<string name="pref_key_strafe_left">Strafe left</string>
	<string name="pref_key_strafe_right">Strafe right</string>
	<string name="pref_key_rotate_left">Rotate left</string>
	<string name="pref_key_rotate_right">Rotate right</string>
	<string name="pref_key_fire">Fire</string>
	<string name="pref_key_next_weapon">Next weapon</string>
	<string name="pref_key_toggle_map">Toggle map</string>
	<string name="pref_key_strafe_mode">Enable strafe mode</string>
	<string name="pref_map_position">Map position</string>
	<string name="pref_show_crosshair">Show crosshair</string>
	<string name="pref_rotate_screen">Rotate in-game screen</string>
	<string name="val_empty">Empty</string>
	<string name="lib_press_key">Press a hardware key</string>
	<string name="lib_none">&lt;none&gt;</string>
	<string name="lib_clear">Clear</string>
	<string name="lbl_fps">FPS: %d</string>
	<string name="lbl_cant_open_door">Can’t open this door</string>
	<string name="lbl_need_blue_key">You need a blue key</string>
	<string name="lbl_need_red_key">You need a red key</string>
	<string name="lbl_need_green_key">You need a green key</string>
	<string name="lbl_secret_found">Secret found</string>
	<string name="lbl_endl_kills">Kills: %d%%</string>
	<string name="lbl_endl_items">Items: %d%%</string>
	<string name="lbl_endl_secrets">Secrets: %d%%</string>
	<string name="lbl_endl_time">Time: %s</string>
	<string name="lbl_gameover">Game Over</string>
	<string name="lbl_gameover_load_autosave">Press fire to load autosave</string>
	<string name="lblh_move">Move</string>
	<string name="lblh_menu">Change Weapon / Menu</string>
	<string name="lblh_fire">Fire</string>
	<string name="lblh_map">Toggle Map</string>
	<string name="lblh_rotate">Rotate</string>
	<string name="lblm_door">To open the door, just go through it</string>
	<string name="lblm_switch">To activate the switch, go up to him as close as possible</string>
	<string name="lblm_turn_left">Turn left</string>
	<string name="lblm_turn_right">Than turn right</string>
	<string name="lblm_this_is_window">This is the window. You shouldn’t go through it</string>
	<string name="eod_info">Congratulations! You have completed all the episodes.\nBut this is not the end - purchase new levels and continue playing!</string>
	<string name="eod_info_locked">Congratulations! You have completed all the episodes.\nRight now, we have been working hard creating new episodes. Wait for updates!</string>
	<string name="eod_ok">Purchase New Levels</string>
	<string name="eod_cancel">Cancel</string>
	<string name="achievements">Achievements</string>
	<string name="achievements_item_achieved">★ ACHIEVED ★</string>
	<string name="achievements_exp">EXP: %d</string>
	<string name="leaderboard">Leaderboard</string>
	<string name="leaderboard_exp">EXP: %d</string>
	<string name="leaderboard_achieved">%1$d/%2$d achieved</string>
	<string name="store_levels">Levels</string>
	<string name="store_upgrade">Upgrade</string>
	<string name="store_additional">Additional</string>
	<string name="store_earn">★ Earn Credits ★</string>
	<string name="store_back">← Back</string>
	<string name="store_credits">%d credits</string>
	<string name="store_item_locked">LOCKED</string>
	<string name="store_item_purchased">PURCHASED</string>
	<string name="store_item_price">%d CREDITS</string>
	<string name="store_item_earn">EARN %d CREDITS</string>
	<string name="store_item_earn_free">+%d FOR FREE</string>
	<string name="store_buy_title">BUY / %s</string>
	<string name="store_buy_price">%d CREDITS</string>
	<string name="store_buy_accept"><![CDATA[<b><font color="#FF0000">★ ACCEPT ★</font></b>]]></string>
	<string name="store_buy_cancel"><![CDATA[<b>CANCEL</b>]]></string>
	<string name="store_nocred_title">Not enough credits</string>
	<string name="store_nocred_content"><![CDATA[
<b>%1$s</b><br /><br />
%2$s<br /><br />
<b><font color="#FFD700">YOU NEED: %3$d CREDITS</font></b><br />
<b><font color="#FF0000">YOU HAVE: %4$d CREDITS</font></b>
	]]></string>
	<string name="store_nocred_earn"><![CDATA[<b><font color="#FFD700">★ ADD CREDITS ★</font></b>]]></string>
	<string name="store_nocred_cancel"><![CDATA[<b>CANCEL</b>]]></string>
	<string name="share_title">Gloomy Dungeons 2: Blood Honor: a true old school 3D shooter for you</string>
	<string name="send_email_using">Send email using...</string>
	<string name="share_fb_name">Gloomy Dungeons II</string>
	<string name="share_fb_caption">Gloomy Dungeons II – a true old school 3D shooter for you</string>
	<string name="share_fb_description">EXP: %1$d / MAP: %2$s / KILLS: %3$d / ITEMS: %4$d / SECRETS: %5$d / TIME: %6$s</string>
	<string name="pt_tutorial">Tutorial</string>
	<string name="pt_episode_1">Episode I</string>
	<string name="pd_episode_1">Ten basic levels</string>
	<string name="pt_episode_2">Episode II</string>
	<string name="pd_episode_2">Second episode</string>
	<string name="pt_episode_3">Episode III</string>
	<string name="pd_episode_3">Third episode</string>
	<string name="pt_episode_4">Episode IV</string>
	<string name="pd_episode_4">Fourth episode</string>
	<string name="pt_episode_5">Episode V</string>
	<string name="pd_episode_5">Fifth episode</string>
	<string name="pt_initial_armor">Initial armor</string>
	<string name="pd_initial_armor">To start the level with the armor at least 200</string>
	<string name="pt_dbl_chaingun">Double chaingun</string>
	<string name="pd_dbl_chaingun">Need more than one chaingun? Double chaingun is for you!</string>
	<string name="pt_dbl_pistol">Double pistol</string>
	<string name="pd_dbl_pistol">Premium gun available only in the store. 8x more powerful than a pistol.</string>
	<string name="pt_prem_dbl_shotgun">Improved double shotgun</string>
	<string name="pd_prem_dbl_shotgun">Premium gun available only in the store. 1.5x more powerful than a double shotgun.</string>
	<string name="pt_additional_health">Additional health</string>
	<string name="pd_additional_health">Adds +50 to maximum health</string>
	<string name="pt_additional_ammo">Additional ammo</string>
	<string name="pd_additional_ammo">Adds +75 to max clips, +35 to max shells, +25 to max rockets</string>
	<string name="pt_additional_armor">Additional armor</string>
	<string name="pd_additional_armor">Adds +100 to maximum armor</string>
	<string name="pt_difficulty">Change difficulty</string>
	<string name="pd_difficulty">Is the game too hard for you? Or you are an old school DOOM player and this game is too easy? Change it!</string>
	<string name="pt_always_open_map">Always open map</string>
	<string name="pd_always_open_map">Start game with already opened map (you can disable it if you want)</string>
	<string name="pt_secrets">Guide to secrets</string>
	<string name="pd_secrets">Can’t find any secret? All secrets will be shown on minimap!</string>
	<string name="pt_codes">Cheat codes</string>
	<string name="pd_codes">Want to skip level? Show current FPS? Get all keys at once? Or you are just fan of secret codes? This guide reveals the mystery of the secrect codes.</string>
	<string name="pt_earn_debug">Free credits</string>
	<string name="pd_earn_debug">+100 credits</string>
</resources>