<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:zame="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/back_common"
	android:orientation="vertical"
	android:gravity="center_vertical"
	tools:ignore="NestedWeights,Overdraw"
>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="gloomy"
		android:text="@string/app_name"
		style="@style/Gloomy.Prep.Title"
	/>
	<ProgressBar
		android:id="@+id/progress"
		android:indeterminate="false"
		android:indeterminateOnly="false"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginRight="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		style="?android:attr/progressBarStyleHorizontal"
		android:max="100"
	/>
	<TextView
		android:id="@+id/info"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="gloomy"
		android:text="@string/prep_textures"
		style="@style/Gloomy.Prep.Action"
	/>
	<Button
		android:id="@+id/cancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:fontFamily="gloomy"
		android:text="@string/prep_download_later"
		android:layout_gravity="center_horizontal"
		android:paddingLeft="30dp"
		android:paddingRight="30dp"
		style="@style/Gloomy.Common.Button"
		android:visibility="invisible"
	/>
</LinearLayout>
