<?xml version="1.0" encoding="utf-8"?>
<zame.game.libs.AbsoluteLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:zame="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/back_common"
	tools:ignore="NestedWeights,Overdraw"
>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		zame:layout_heightWeight="0.5"
		zame:layout_x="0dp"
		zame:layout_y="0dp"
		android:src="@drawable/logo"
	/>
	<!-- layout_xWeight = 0.975 - 0.19 -->
	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="0dp"
		zame:layout_widthWeight="0.19"
		zame:layout_heightWeight="0.35"
		zame:layout_xWeight="0.785"
		zame:layout_yWeight="0.025"
		android:weightSum="0.35"
		android:orientation="vertical"
	>
		<ImageButton
			android:id="@+id/store"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="0.25"
			android:scaleType="fitCenter"
			android:background="@null"
			android:src="@drawable/btn_store"
			android:contentDescription="@string/menu_store"
		/>
		<TextView
			android:fontFamily="gloomy"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="0.1"
			style="@style/Gloomy.Menu.Text"
			android:text="@string/menu_store"
		/>
	</LinearLayout>
	<!-- layout_xWeight = 0.975 - 0.19 * 2 -->
	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="0dp"
		zame:layout_widthWeight="0.19"
		zame:layout_heightWeight="0.35"
		zame:layout_xWeight="0.595"
		zame:layout_yWeight="0.025"
		android:weightSum="0.35"
		android:orientation="vertical"
	>
		<ImageButton
			android:id="@+id/achievements"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="0.25"
			android:scaleType="fitCenter"
			android:background="@null"
			android:src="@drawable/btn_achievements"
			android:contentDescription="@string/menu_achievements"
		/>
		<TextView
			android:fontFamily="gloomy"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="0.1"
			style="@style/Gloomy.Menu.Text"
			android:text="@string/menu_achievements"
		/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="0dp"
		zame:layout_widthWeight="0.95"
		zame:layout_heightWeight="0.35"
		zame:layout_cxWeight="0.5"
		zame:layout_cyWeight="0.5"
		android:orientation="horizontal"
	>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2"
			android:weightSum="0.35"
			android:orientation="vertical"
		>
			<ImageButton
				android:id="@+id/play"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.25"
				android:scaleType="fitCenter"
				android:background="@null"
				android:src="@drawable/btn_play"
				android:contentDescription="@string/menu_play"
			/>
			<TextView
				android:fontFamily="gloomy"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.1"
				style="@style/Gloomy.Menu.Text"
				android:text="@string/menu_play"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2"
			android:weightSum="0.35"
			android:orientation="vertical"
		>
			<ImageButton
				android:id="@+id/load"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.25"
				android:scaleType="fitCenter"
				android:background="@null"
				android:src="@drawable/btn_load"
				android:contentDescription="@string/menu_load"
			/>
			<TextView
				android:fontFamily="gloomy"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.1"
				style="@style/Gloomy.Menu.Text"
				android:text="@string/menu_load"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2"
			android:weightSum="0.35"
			android:orientation="vertical"
		>
			<ImageButton
				android:id="@+id/save"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.25"
				android:scaleType="fitCenter"
				android:background="@null"
				android:src="@drawable/btn_save"
				android:contentDescription="@string/menu_save"
			/>
			<TextView
				android:fontFamily="gloomy"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.1"
				style="@style/Gloomy.Menu.Text"
				android:text="@string/menu_save"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2"
			android:weightSum="0.35"
			android:orientation="vertical"
		>
			<ImageButton
				android:id="@+id/share"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.25"
				android:scaleType="fitCenter"
				android:background="@null"
				android:src="@drawable/btn_share"
				android:contentDescription="@string/menu_share"
			/>
			<TextView
				android:fontFamily="gloomy"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.1"
				style="@style/Gloomy.Menu.Text"
				android:text="@string/menu_share"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2"
			android:weightSum="0.35"
			android:orientation="vertical"
		>
			<ImageButton
				android:id="@+id/options"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.25"
				android:scaleType="fitCenter"
				android:background="@null"
				android:src="@drawable/btn_options"
				android:contentDescription="@string/menu_options"
			/>
			<TextView
				android:fontFamily="gloomy"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="0.1"
				style="@style/Gloomy.Menu.Text"
				android:text="@string/menu_options"
			/>
		</LinearLayout>
	</LinearLayout>
	<!-- layout_yWeight = 1 - 0.35 -->
	<zame.promo.PromoView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		zame:layout_heightWeight="0.35"
		zame:layout_x="0dp"
		zame:layout_yWeight="0.65"
	/>
	<LinearLayout
		android:id="@+id/discount_offer_wrap"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		zame:layout_heightWeight="0.075"
		zame:layout_x="0dp"
		zame:layout_y="0dp"
		android:background="#080"
		android:orientation="horizontal"
	>
		<View
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.025"
		/>
		<TextView
			android:fontFamily="gloomy"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.7125"
			android:textColor="#FFF"
			android:gravity="left|center_vertical"
			android:textSize="@dimen/gloomy_menu_textsize"
			android:text="@string/menu_discount_offer"
		/>
		<TextView
			android:fontFamily="gloomy"
			android:id="@+id/discount_offer_time"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2375"
			android:textColor="#FFF"
			android:gravity="right|center_vertical"
			android:textSize="@dimen/gloomy_menu_textsize"
		/>
		<View
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.025"
		/>
	</LinearLayout>
	<!-- layout_yWeight = 1 - 0.075 -->
	<FrameLayout
		android:id="@+id/update_available_wrap"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		zame:layout_heightWeight="0.075"
		zame:layout_x="0dp"
		zame:layout_yWeight="0.925"
		android:background="#F00"
		android:orientation="horizontal"
		android:visibility="gone"
	>
		<TextView
			android:fontFamily="gloomy"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:textColor="#FFF"
			android:gravity="center"
			android:textSize="@dimen/gloomy_menu_textsize"
			android:text="@string/menu_new_version"
		/>
	</FrameLayout>
	<include layout="@layout/inc_menu_gplay" />
</zame.game.libs.AbsoluteLayout>
